[gd_scene load_steps=7 format=3 uid="uid://cio4itacbw6xa"]

[ext_resource type="Texture2D" uid="uid://cfub4kxvs41y8" path="res://assets/Visual Novel/Exports/Dialogue/DialogueContainer.png" id="1_l20yl"]
[ext_resource type="Script" path="res://VN_dialogue_box.gd" id="1_qu5s3"]
[ext_resource type="Texture2D" uid="uid://difhqklmbir06" path="res://assets/Visual Novel/Exports/NextBtnPressed.png" id="3_0u38d"]

[sub_resource type="Animation" id="Animation_hqcwg"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(680, 196), Vector2(680, 210)]
}

[sub_resource type="Animation" id="Animation_8o4hs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(758, 196)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fgifk"]
_data = {
"Idle": SubResource("Animation_hqcwg"),
"RESET": SubResource("Animation_8o4hs")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="dialogue_box" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -371.0
offset_top = -343.0
offset_right = 360.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_qu5s3")

[node name="TextureRect" type="TextureRect" parent="dialogue_box"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_l20yl")
expand_mode = 2
metadata/_edit_lock_ = true

[node name="text" type="RichTextLabel" parent="dialogue_box"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 25
bbcode_enabled = true
text = "Hello, this is the placeholder dialogue that does nothing. But I have to write enought to wrap the text around the box  to make sure it works. "
metadata/_edit_lock_ = true

[node name="NextBtnPressed" type="Sprite2D" parent="dialogue_box"]
position = Vector2(758, 196)
scale = Vector2(0.709302, 0.709302)
texture = ExtResource("3_0u38d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="dialogue_box/NextBtnPressed"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_fgifk")
}

[node name="yes" type="Button" parent="dialogue_box"]
layout_mode = 0
offset_left = 264.0
offset_top = -352.0
offset_right = 474.0
offset_bottom = -288.0
text = "YES"

[node name="no" type="Button" parent="dialogue_box"]
layout_mode = 0
offset_left = 266.0
offset_top = -252.0
offset_right = 475.0
offset_bottom = -189.0
text = "NO"

[connection signal="pressed" from="dialogue_box/yes" to="dialogue_box" method="_on_yes_pressed"]
[connection signal="pressed" from="dialogue_box/no" to="dialogue_box" method="_on_no_pressed"]
